Fix spacing issue on avatars

--- a/app/css/_shared.styl
+++ b/app/css/_shared.styl
@@ -445,11 +445,8 @@ body {
 
 	&--avatar-right__avatar,
 	&--full-right__avatar {
-		order: 2;
-	}
-
-	&--avatar-right__avatar {
 		margin-left: 1rem;
+		order: 2;
 	}
 
 	&--full-left__meta,
